about page mostly formatted, minor alignment issues remain

--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,7 @@ header nav a{
 }
 h2{
     font-weight: 600;
+    margin: 30px 0 3s0px 0;
 }
 .middle-content{
     margin: 30px;
@@ -199,4 +200,46 @@ h2{
 }
 .box10{
     background: dodgerblue;
+}
+/*END OF CSS FOR INDEX PAGE*/
+/* BEGINNING OF CSS FOR ABOUT PAGE*/
+div .about-page{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.top-about{
+    padding: 20px 0 20px 0;
+    border-bottom: 1px dotted black;
+}
+.about-row{
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+.about-column{
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    padding: 20px 20px 20px 40pxs;
+    border-bottom: 1px dotted black;
+}
+.about-column img{
+    margin-right: 30px;
+}
+h2.about-h2{
+    margin: 20px 0 20px 0;
+}
+.learn{
+    width: 120px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 20px 0 20px 0;
+}
+.bottom-about{
+    padding: 20px;
 }
